--- a/markdownblog/templates/index.html
+++ b/markdownblog/templates/index.html
@@ -8,10 +8,7 @@
 
   </head>
   <body>
-    <h1>Markdown Blog</h1>
-    {% for article in object_list %}
-    <h2><a href="{% url 'article:one' pk=article.pk %}">{{ article.title }}</h2>
-    {% endfor %}
+    <h1><a href="{% url 'article:all' %}">Go to Article list!</a></h1>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
     <script>
